k8s-files-raw/command-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ms1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-ms1
  template:
    metadata:
      labels:
        app: kube-ms1
    spec:
      containers:
        - name: kube-ms1
          image: mycodeschool/crud-command-api:20.06.2025.15.01.52-prod
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: kube-ms1
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: kube-ms1
