k8s-files-raw/notifications-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
        - name: notifications-service
          image: mycodeschool/crud-notification-api:21.06.2025.19.39.12-prod
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: notifications-service
