k8s-files-raw/rabbitMQ.yaml
---
###############################################################################
# 3. Deployment with Recreate Strategy
###############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  strategy:
    type: Recreate  # Tear down old Pod before starting a new one
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbit-container
          image: rabbitmq:3.9.11-management-alpine
          ports:
            - containerPort: 5672   # AMQP
            - containerPort: 15672  # Management UI
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc

---
###############################################################################
# 4. Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
    - port: 15672
      targetPort: 15672
      name: management
